# labo

./: .gitignore  AGENTS.md  DESIGN.md  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3c1a6f9b1d2e_add_entry_version_for_optimistic_.py  a7f3b2c4d5e6_add_position_to_notebooks_and_entries.py  b03d8c407546_add_scoped_tokens_table.py  cd74e2f1f38c_add_sessions_and_api_keys_tables.py  d4e8f1a2c3b7_add_kind_to_entry_revisions.py  e2819226286e_rename_owner_id_to_author_id_and_seed_.py
backend/app/: main.py
backend/app/core/: access.py  config.py  database.py  deps.py  events.py  mime.py  security.py
backend/app/models/: __init__.py
backend/app/routers/: attachments.py  auth.py  entries.py  events.py  files.py  indigo.py  notebooks.py  permissions.py  scoped_tokens.py  search.py  users.py
backend/app/schemas/: __init__.py
backend/app/services/: export.py  markdown.py
backend/tests/: test_api.py  test_attachments.py  test_entry_content.py  test_export.py  test_markdown.py  test_search.py
clients/python/: README.md  pyproject.toml
clients/python/src/labo/: __init__.py  _resource.py  marimo.py
clients/python/tests/: test_entry_content.py  test_read_stream.py  test_resource.py  test_write_stream.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ApiAccessModal.tsx  AppShell.tsx  EntryEditorForm.tsx  KetcherModal.tsx  Logo.tsx  ProtectedRoute.tsx  SearchBar.tsx  (+4 more)
(+15 files in other folders)
