[project]
name = "labo"
version = "0.1.0"
description = "Python client for the Labo lab notebook API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
]
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
marimo = [
    "marimo>=0.8",
]
dev = [
    "pytest>=8,<9",
    "pytest-httpserver>=1.0,<2",
    "ruff>=0.4,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/labo"]

[tool.ruff]
line-length = 100
